[web] Fix mobile view appearing on small laptops

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -41,7 +41,7 @@ code {
   backdrop-filter:blur(20px);
 }
 
-@media(max-height: 700px), (max-width: 700px) {
+@media(max-height: 500px), (max-width: 500px) {
   .form-modal {
     height: auto;
     width: 90%;
@@ -77,7 +77,7 @@ home::-webkit-scrollbar{
   height: 100vh;
 }
 
-@media(max-width: 700px) {
+@media(max-width: 500px) {
   .home {
     display: grid;
     grid-template-columns: repeat(4, 100%);
